Bug 511239 - Falkon cannot handle blob: links
Summary: Falkon cannot handle blob: links
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.08.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-27 20:21 UTC by Andrés Becerra
Modified: 2025-10-27 21:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrés Becerra 2025-10-27 20:21:25 UTC
SUMMARY

Some sites with cloudflare challenges do not work with falkon

STEPS TO REPRODUCE
1. Browse some site with the problem. [www.wise.com] 


OBSERVED RESULT
A pop up window with the text:

Falkon cannot handle blob: links. The requested link is 
blob:https://challenges.cloudflare.com/1ej765kb9-7f05-4864-9f10-4f19458f9a9f
Do you want Falkon to try open this link in system application?

EXPECTED RESULT
Browsing the website with the cloudflare challenge

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version: 6.5.0^
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.3
Comment 1 Juraj 2025-10-27 21:00:36 UTC
Git commit 3c915e5cb0c47734e8ebf312ff71712df0320caf by Juraj Oravec.
Committed on 27/10/2025 at 20:58.
Pushed by jurajo into branch 'master'.

Add blob URI scheme to list of internal schemes
FIXED-IN: 25.12.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +2    -1    src/lib/webengine/webpage.cpp

https://invent.kde.org/network/falkon/-/commit/3c915e5cb0c47734e8ebf312ff71712df0320caf