Add blob URI scheme to list of internal schemes

BUG: 511239
FIXED-IN: 25.12.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>